# cue-n-woo

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: build-role-images.yml
commissioner/: CATALOG.yaml  pyproject.toml
commissioner/commissioners/common/: utils.py
commissioner/commissioners/ruleset_strategy_commissioner/: build.sh
commissioner/tests/: test_commissioner_strategies.py  test_commissioner_websocket.py  test_docker_smoke.py
docs/investigations/: 2026-06-18-tournament-timeouts.md
scripts/: run_server.sh  setup_flas.sh  ui_proxy.py
v2/: README.md  game_server.py  llm_worker.py  signing.py
v2/coworld/: Dockerfile  README.md  claude_policy.py  compose.yaml  coworld_manifest.json  coworld_manifest_template.json  game.py  harness.py  kyle_policy.py  player.py
v2/coworld/commissioner/: loadtest.py  scheduling.py  server.py
v2/coworld/data/: concepts.json
v2/coworld/deploy/: README.md  SERVING_OPS.md  bake_ami.md  bake_box.sky.yaml  bench_batching.py  controller_credentials.md  fleet-ingress.yaml  fleet_metrics.py  scale.sh  worker-ingress.yaml  worker.sky.yaml  worker_service.sky.yaml  worker_service_fast.sky.yaml  worker_service_multi.sky.yaml  worker_service_overprov_test.sky.yaml  worker_service_standby.sky.yaml  worker_service_validate.sky.yaml
v2/tests/: test_axis_concepts.py  test_baseline_policy_fallback.py  test_broadcast_timeout.py  test_challenge_freshness.py  test_commissioner_scheduling.py  test_coworld_offline_smoke.py  test_delta_logit_scoring.py  test_game_signing.py  test_signing.py  test_timeout_scoring.py
(+32 files in other folders)
