[project]
name = "steering-game"
version = "0.1.0"
description = "Local FLAS activation-steering web UI."
requires-python = ">=3.11"
dependencies = [
    "flas @ git+https://github.com/flas-ai/FLAS.git@main",
    "huggingface_hub==0.36.2",
    "numpy==1.26.4",
    "torch==2.12.0",
    "transformers==4.56.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["app.py"]

[tool.hatch.metadata]
allow-direct-references = true
